src/test/resources/semantic/reject/tooManyFunctionCallParams1.ul
void main() {
    foo(5, 5.4);
}

void foo(int one) {
}
